# gemCLI

./: .gitignore  README.MD  pyproject.toml
src/: .env  README.MD  _init_.py  pyproject.toml
src/gemCLI/: gemcli.py
